Tickets Animation add

--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,12 @@ a{
             color: #333333;
             
         }
+    
+    @media screen and (min-width:768px){
+        .djs__information p{
+            margin-top: 4rem;
+        }
+    }
 
 .header{
     background-image: url("../img/bg_header.png");
@@ -223,7 +229,14 @@ a{
                     font-size: 1.3rem;
                 }
             }
-    
+
+.list-square li::before{
+    content: "■";
+    color: var(--secundary-color);
+    margin-right: 10px;
+}
+
+
 .presentations{
     background-image: url("../img/bg_presentations.png");
     width: 100%;
@@ -233,8 +246,8 @@ a{
     color: var(--white-color);
     padding-left:18px;
     padding-right:18px;
-    padding-bottom:5rem;
-    padding-top:5rem;
+    padding-bottom:var(--padding-section);
+    padding-top:var(--padding-section);
     position: relative;
 }
 
@@ -366,32 +379,98 @@ a{
         }
 
 
-    .sectionBorder--bottom:before{
-        right: 0;
-        bottom:0;
-        position: absolute;
-        width:10px;
-        height: 141px;
-        background-color:var(--main-bg-color);
-        content: "";
+.sectionBorder--bottom:before{
+    right: 0;
+    bottom:0;
+    position: absolute;
+    width:10px;
+    height: 141px;
+    background-color:var(--main-bg-color);
+    content: "";
+}
+
+.sectionBorder--top:after{
+    left:0;
+    top: 0;
+    position: absolute;
+    width:10px;
+    height: 141px;
+    background-color:var(--main-bg-color);
+    content: "";
+}
+
+.slick-slide{
+    margin-right: 1rem;    
+}
+
+.subtitle{
+    color: #53C7F0;
+    max-width: 400px;
+    font-size: 1.2rem;
+    margin-left: -15px;
+}
+
+.text--red{
+    color: var(--main-bg-color-hover);
+}
+
+.text--pink{
+    color: #E25ABC;
+}
+
+.text--purple{
+    color: #7E5AE2;
+}
+
+.tickets{
+    background-color: var(--blue-color);
+    padding-top: var(--padding-section);
+    padding-bottom: var(--padding-section);
+    box-sizing: border-box;
+    padding-left:15px;
+    padding-right:15px;
+}
+    @media screen and (min-width:768px){
+        .tickets{
+            padding-left:0;
+            padding-right:0;
+        }
+    }
+    .tickets__price{
+        background-color:#24243C;
+        color:var(--white-color);
+        text-align: center;
+        padding: 3rem;
+        margin:1rem;
+        transition:all .3s ease-out;
+        box-sizing: border-box;
+    }
+        .tickets__price:hover{
+             background-color: var(--blue-color);
+             border:1px dashed #24243C;
+             transform: perspective(400px) rotateY(5deg);
+        }
+
+    .tickets__value li{
+        margin-right:0.5rem;
     }
 
-    .sectionBorder--top:after{
-        left:0;
-        top: 0;
-        position: absolute;
-        width:10px;
-        height: 141px;
-        background-color:var(--main-bg-color);
-        content: "";
+    .tickets__number{
+        color: var(--secundary-color);
+        font-size:3rem;
+        font-weight: 500;
+        letter-spacing: var(--letter-spacing);
     }
+        .tickets__number:before{
+            content: "$"
+        }
 
-    .slick-slide{
-        margin-right: 1rem;
-       
-    }
+        .tickets__number:after{
+            content: "usd";
+            font-size:1rem;
+        }
 
-        
+
 
 .title{
     font-family: var(--main-font-family);
