--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,61 @@ a{
     font-family: var(--main-font-family);
 }
 
+.blog{
+    /* padding-top: var(--padding-section);
+    padding-bottom: var(--padding-section); */
+}
+    .blog__item{
+        margin-bottom: 3rem;
+    }
+    .blog__share{
+        font-size: 1.5rem;
+    }
+    
+    .blog__share strong,
+    .blog__share i{
+        display:block;
+        text-align: center;
+    }
+        .blog__share i{
+            font-size: 2rem;
+        }
+
+    .blog__date,
+    .blog__icons{
+        margin-bottom: 1.5rem;
+    }
+        .blog__icons--custom{
+            color: var(--secundary-color);
+        }
+
+    .blog__title a{
+        color: var(--main-bg-color);
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        display: block;
+        transition: all .3s ease-in-out;
+    }
+        .blog__title a:hover{
+            text-decoration: none;
+            color: var(--main-bg-color-hover);
+        }
+
+    .blog__header{
+        margin-bottom: 1.5rem;
+    }
+
+    .blog__link{
+        display: block;
+        overflow: hidden;
+    }
+        .blog__link img{
+           transition: all .3s ease-in-out;
+        }
+        .blog__link:hover img{
+            transform: scale(1.1);
+        }
+
 .boxImage{
     border-image: linear-gradient(to left, #2a66de 0%, #fd225a 100%);
     border-image-slice: 1;
@@ -183,9 +238,6 @@ a{
     padding-bottom: var(--padding-section);
     position: relative;
 }
-    
-    
-
     .djs__animation {
         position: relative;
         overflow: hidden;
@@ -641,9 +693,7 @@ a{
         position:relative;
     }
 
-        .presentations--inside p{
-            max-width: 700px;
-        }
+       
 
 .previewMusical{
     padding-top: var(--padding-section);
